refactor: replace customer auth/reservation/payment with admin slot management
Drop the user-facing booking system (users, reservations, payments,
receipts, Telegram bot) in favor of admin-only slot management:

- Admins toggle room time-slots reserved/available per date; customers
  book via WhatsApp (number in settings).
- New entities: Admin (ROLE_ADMIN/ROLE_ROOT), Review, Setting,
  SlotReservation. Root admin seeded from env via DataInitializer.
- New endpoints: /api/availability, /api/settings, /api/reviews, and
  admin ops under /api/admin (auth/login, slots/toggle, settings, users).
- Simplified schema (rooms, time_slots, slot_reservations, reviews,
  admins, settings) with idempotent schema.sql/data.sql.
- Frontend rebuilt around availability grid + reviews; booking modals
  removed.
- Fix trailer ref type (HTMLDivElement) so the production build passes.

Required env vars changed: JWT_SECRET (was APP_JWT_SECRET),
ROOT_ADMIN_USERNAME, ROOT_ADMIN_PASSWORD are now mandatory.